Fix padding issue on mobile

--- a/scss/components/_description.scss
+++ b/scss/components/_description.scss
@@ -1,5 +1,6 @@
 .description {
 	margin-bottom: 2rem;
+	padding: 0 1rem;
 
 	@media (min-width: 60em) {
 		grid-column-start: 2;
