--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/variables' as *;
 
 .header {
-	padding-top: 2rem;
+	padding: 2rem 1rem 0 1rem;
 	margin-bottom: 2rem;
 
 	@media (min-width: 60em) {
