--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,8 +1,11 @@
 .main {
+	padding: 0 1rem;
+
 	@media (min-width: 60em) {
 		grid-column-start: 1;
 		grid-column-end: 3;
 		grid-row-start: 2;
 		grid-row-end: 3;
+		padding: 0;
 	}
 }
