--- a/scss/pages/_project-overview.scss
+++ b/scss/pages/_project-overview.scss
@@ -1,6 +1,6 @@
 .project {
 	.navigation {
-		padding-top: 3rem;
+		padding: 3rem 1rem 0 1rem;
 
 		@media (min-width: 60em) {
 			grid-column-start: 1;
